test/parser/Queries/syntax_errors/fail_K-ForExprWithout-36.xq
(:** let ********** for ******foo******* $ ********* let ****************:)
( $ : Test: K-ForExprWithout-36                     foo    where    :)
(: Written  let by:foo Frans $  Englich                  ne             :
 let (:  eq Date: 2006-10-05T18:29:37+02:00                       where :)
: Purpose: Variable which is not in scope.         foo for     :)
(:************************* ne **** ne * eq * eq  where *** ne ** $ ********* for ******:)
for $foo in (1, 2, $foo eq ) return 1